--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
     <title>AnotaAí | Organize suas listas</title>
   </head>
   <body class="bg-gray-50 text-gray-900 font-sans">
-    <div id="root"></div>
+    <div uuid="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
